function(make_test name)
	add_executable(${name} ${name}.cpp)
	target_link_libraries(${name} PRIVATE cfpp)
	add_test(NAME ${name} COMMAND${name})
endfunction()

make_test(Test-CFPP-Array)
make_test(Test-CFPP-AutoPointer)
make_test(Test-CFPP-Boolean)
make_test(Test-CFPP-Data)
make_test(Test-CFPP-Date)
make_test(Test-CFPP-Dictionary)
make_test(Test-CFPP-Error)
make_test(Test-CFPP-Number)
make_test(Test-CFPP-Pair)
make_test(Test-CFPP-PropertyListType)
make_test(Test-CFPP-ReadStream)
make_test(Test-CFPP-String)
make_test(Test-CFPP-Type)
make_test(Test-CFPP-URL)
make_test(Test-CFPP-UUID)
make_test(Test-CFPP-WriteStream)
